--- a/environment.yml
+++ b/environment.yml
@@ -1,26 +1,361 @@
 name: dsa-engine-health
 channels:
+  - defaults
   - conda-forge
 dependencies:
-  - python=3.10
-  - black
-  - flake8
-  - isort
-  - pip
-  - typer
-  - loguru
-  - tqdm
-  - ipython
-  - jupyterlab
-  - matplotlib
-  - notebook
-  - numpy
-  - pandas
-  - scikit-learn
-  - dvc
-  - dvc-s3
+  - aiobotocore=2.13.2=pyhd8ed1ab_0
+  - aiohappyeyeballs=2.3.5=pyhd8ed1ab_0
+  - aiohttp=3.10.3=py310h936d840_0
+  - aiohttp-retry=2.8.3=pyhd8ed1ab_0
+  - aioitertools=0.11.0=pyhd8ed1ab_0
+  - aiosignal=1.3.1=pyhd8ed1ab_0
+  - amqp=5.2.0=pyhd8ed1ab_1
+  - antlr-python-runtime=4.9.3=pyhd8ed1ab_1
+  - anyio=4.4.0=pyhd8ed1ab_0
+  - appdirs=1.4.4=pyh9f0ad1d_0
+  - appnope=0.1.4=pyhd8ed1ab_0
+  - archspec=0.2.3=pyhd8ed1ab_0
+  - argon2-cffi=23.1.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py310h6729b98_4
+  - arrow=1.3.0=pyhd8ed1ab_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - async-lru=2.0.4=pyhd8ed1ab_0
+  - async-timeout=4.0.3=pyhd8ed1ab_0
+  - asyncssh=2.14.1=pyhd8ed1ab_0
+  - atk-1.0=2.38.0=h4bec284_2
+  - atpublic=3.0.1=pyhd8ed1ab_0
+  - attrs=24.2.0=pyh71513ae_0
+  - babel=2.14.0=pyhd8ed1ab_0
+  - backports.zoneinfo=0.2.1=py310h2ec42d9_8
+  - beautifulsoup4=4.12.3=pyha770c72_0
+  - billiard=4.2.0=py310hb372a2b_0
+  - black=24.8.0=py310h2ec42d9_0
+  - bleach=6.1.0=pyhd8ed1ab_0
+  - boltons=24.0.0=pyhd8ed1ab_0
+  - boto3=1.34.131=pyhd8ed1ab_0
+  - botocore=1.34.131=pyge310_1234567_0
+  - brotli=1.1.0=h0dc2134_1
+  - brotli-bin=1.1.0=h0dc2134_1
+  - brotli-python=1.1.0=py310h9e9d8ca_1
+  - bzip2=1.0.8=hfdf4475_7
+  - c-ares=1.33.0=h51dda26_0
+  - ca-certificates=2024.7.4=h8857fd0_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.18.0=h37bd5c4_3
+  - celery=5.4.0=pyhd8ed1ab_1
+  - certifi=2024.7.4=pyhd8ed1ab_0
+  - cffi=1.17.0=py310h5dbc1e2_0
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
+  - click-didyoumean=0.3.1=pyhd8ed1ab_0
+  - click-plugins=1.1.1=py_0
+  - click-repl=0.3.0=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - conda=24.7.1=py310h2ec42d9_0
+  - conda-libmamba-solver=24.7.0=pyhd8ed1ab_0
+  - conda-package-handling=2.3.0=pyh7900ff3_0
+  - conda-package-streaming=0.10.0=pyhd8ed1ab_0
+  - configobj=5.0.8=pyhd8ed1ab_0
+  - contourpy=1.2.1=py310hb3b189b_0
+  - cryptography=43.0.0=py310h8d695f1_0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - debugpy=1.8.5=py310he0a0c5d_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - dictdiffer=0.9.0=pyhd8ed1ab_0
+  - diskcache=5.6.3=pyhd8ed1ab_0
+  - distro=1.9.0=pyhd8ed1ab_0
+  - dpath=2.2.0=pyha770c72_0
+  - dulwich=0.22.1=py310h0809fd1_0
+  - dvc-http=2.32.0=pyhd8ed1ab_0
+  - dvc-render=1.0.2=pyhd8ed1ab_0
+  - dvc-s3=3.2.0=pyhd8ed1ab_0
+  - dvc-studio-client=0.21.0=pyhd8ed1ab_0
+  - dvc-task=0.4.0=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - executing=2.0.1=pyhd8ed1ab_0
+  - expat=2.6.2=h73e2aa4_0
+  - filelock=3.15.4=pyhd8ed1ab_0
+  - flake8=7.1.1=pyhd8ed1ab_0
+  - flatten-dict=0.4.2=pyhd8ed1ab_1
+  - flufl.lock=8.1.0=pyhd8ed1ab_0
+  - fmt=10.2.1=h7728843_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_2
+  - fontconfig=2.14.2=h5bb23bf_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.53.1=py310h936d840_0
+  - fqdn=1.5.1=pyhd8ed1ab_0
+  - freetype=2.12.1=h60636b9_2
+  - fribidi=1.0.10=hbcb3906_0
+  - frozendict=2.4.4=py310h936d840_0
+  - frozenlist=1.4.1=py310hb372a2b_0
+  - fsspec=2024.6.1=pyhff2d567_0
+  - funcy=2.0=pyhd8ed1ab_0
+  - future=1.0.0=pyhd8ed1ab_0
+  - gdk-pixbuf=2.42.12=ha587570_0
+  - gitdb=4.0.11=pyhd8ed1ab_0
+  - gitpython=3.1.43=pyhd8ed1ab_0
+  - grandalf=0.7=pyhd8ed1ab_0
+  - graphite2=1.3.13=h73e2aa4_1003
+  - graphviz=12.0.0=he14ced1_0
+  - gtk2=2.24.33=h2c15c3c_5
+  - gts=0.7.6=h53e17e3_4
+  - h11=0.14.0=pyhd8ed1ab_0
+  - h2=4.1.0=pyhd8ed1ab_0
+  - harfbuzz=9.0.0=h098a298_1
+  - hpack=4.0.0=pyh9f0ad1d_0
+  - httpcore=1.0.5=pyhd8ed1ab_0
+  - httpx=0.27.0=pyhd8ed1ab_0
+  - hydra-core=1.3.2=pyhd8ed1ab_0
+  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - icu=75.1=h120a0e1_0
+  - idna=3.7=pyhd8ed1ab_0
+  - importlib-metadata=8.2.0=pyha770c72_0
+  - importlib_metadata=8.2.0=hd8ed1ab_0
+  - importlib_resources=6.4.0=pyhd8ed1ab_0
+  - ipykernel=6.29.5=pyh57ce528_0
+  - ipython=8.26.0=pyh707e725_0
+  - isoduration=20.11.0=pyhd8ed1ab_0
+  - isort=5.13.2=pyhd8ed1ab_0
+  - iterative-telemetry=0.0.8=pyhd8ed1ab_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jinja2=3.1.4=pyhd8ed1ab_0
+  - jmespath=1.0.1=pyhd8ed1ab_0
+  - joblib=1.4.2=pyhd8ed1ab_0
+  - json5=0.9.25=pyhd8ed1ab_0
+  - jsonpatch=1.33=pyhd8ed1ab_0
+  - jsonpointer=3.0.0=py310h2ec42d9_0
+  - jsonschema=4.23.0=pyhd8ed1ab_0
+  - jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_0
+  - jupyter-lsp=2.2.5=pyhd8ed1ab_0
+  - jupyter_client=8.6.2=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=py310h2ec42d9_0
+  - jupyter_events=0.10.0=pyhd8ed1ab_0
+  - jupyter_server=2.14.2=pyhd8ed1ab_0
+  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
+  - jupyterlab=4.2.4=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
+  - jupyterlab_server=2.27.3=pyhd8ed1ab_0
+  - kiwisolver=1.4.5=py310h88cfcbd_1
+  - kombu=5.4.0=py310h2ec42d9_0
+  - krb5=1.21.3=h37d8d59_0
+  - lcms2=2.16=ha2f27b4_0
+  - lerc=4.0.0=hb486fe8_0
+  - libarchive=3.7.4=h20e244c_0
+  - libblas=3.9.0=22_osx64_openblas
+  - libbrotlicommon=1.1.0=h0dc2134_1
+  - libbrotlidec=1.1.0=h0dc2134_1
+  - libbrotlienc=1.1.0=h0dc2134_1
+  - libcblas=3.9.0=22_osx64_openblas
+  - libcurl=8.9.1=hfcf2730_0
+  - libcxx=18.1.8=heced48a_4
+  - libdeflate=1.21=hfdf4475_0
+  - libedit=3.1.20191231=h0678c8f_2
+  - libev=4.33=h10d778d_2
+  - libexpat=2.6.2=h73e2aa4_0
+  - libffi=3.4.2=h0d85af4_5
+  - libgd=2.3.3=h2e77e4f_10
+  - libgfortran=5.0.0=13_2_0_h97931a8_3
+  - libgfortran5=13.2.0=h2873a65_3
+  - libgit2=1.8.1=h59467ec_1
+  - libglib=2.80.3=h736d271_2
+  - libiconv=1.17=hd75f5a5_2
+  - libintl=0.22.5=hdfe23c8_3
+  - libjpeg-turbo=3.0.0=h0dc2134_1
+  - liblapack=3.9.0=22_osx64_openblas
+  - libmamba=1.5.8=ha449628_0
+  - libmambapy=1.5.8=py310hd168405_0
+  - libnghttp2=1.58.0=h64cf6d3_1
+  - libopenblas=0.3.27=openmp_h8869122_1
+  - libpng=1.6.43=h92b6c6a_0
+  - librsvg=2.58.2=h902c40a_1
+  - libsodium=1.0.18=hbcb3906_1
+  - libsolv=0.7.30=h69d5d9b_0
+  - libsqlite=3.46.0=h1b8f9f3_0
+  - libssh2=1.11.0=hd019ec5_0
+  - libtiff=4.6.0=h603087a_4
+  - libwebp-base=1.4.0=h10d778d_0
+  - libxcb=1.16=h0dc2134_0
+  - libxml2=2.12.7=heaf3512_4
+  - libzlib=1.3.1=h87427d6_1
+  - llvm-openmp=18.1.8=h15ab845_1
+  - loguru=0.7.2=py310h2ec42d9_1
+  - lz4-c=1.9.4=hf0c8a7f_0
+  - lzo=2.10=h10d778d_1001
+  - mamba=1.5.8=py310h6bde348_0
+  - markdown-it-py=3.0.0=pyhd8ed1ab_0
+  - markupsafe=2.1.5=py310hb372a2b_0
+  - matplotlib=3.9.1=py310h2ec42d9_2
+  - matplotlib-base=3.9.1=py310h56dc6a7_2
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - mccabe=0.7.0=pyhd8ed1ab_0
+  - mdurl=0.1.2=pyhd8ed1ab_0
+  - menuinst=2.1.2=py310h2ec42d9_0
+  - mistune=3.0.2=pyhd8ed1ab_0
+  - multidict=6.0.5=py310h90acd4f_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mypy_extensions=1.0.0=pyha770c72_0
+  - nanotime=0.5.2=py_0
+  - nbclient=0.10.0=pyhd8ed1ab_0
+  - nbconvert-core=7.16.4=pyhd8ed1ab_1
+  - nbformat=5.10.4=pyhd8ed1ab_0
+  - ncurses=6.5=h5846eda_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - networkx=3.3=pyhd8ed1ab_1
+  - notebook=7.2.1=pyhd8ed1ab_0
+  - notebook-shim=0.2.4=pyhd8ed1ab_0
+  - numpy=2.0.1=py310he367959_0
+  - omegaconf=2.3.0=pyhd8ed1ab_0
+  - openjpeg=2.5.2=h7310d3a_0
+  - openssl=3.3.1=h87427d6_2
+  - orjson=3.10.7=py310h12a1ced_0
+  - overrides=7.7.0=pyhd8ed1ab_0
+  - packaging=24.1=pyhd8ed1ab_0
+  - pandas=2.2.2=py310hbf2a7f0_1
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - pango=1.54.0=h115fe74_1
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pathlib2=2.3.7.post1=py310h2ec42d9_3
+  - pathspec=0.12.1=pyhd8ed1ab_0
+  - pcre2=10.44=h7634a1b_2
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pillow=10.4.0=py310h2fdc51f_0
+  - pip=24.2=pyhd8ed1ab_0
+  - pixman=0.43.4=h73e2aa4_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - pluggy=1.5.0=pyhd8ed1ab_0
+  - prometheus_client=0.20.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.47=pyha770c72_0
+  - prompt_toolkit=3.0.47=hd8ed1ab_0
+  - psutil=6.0.0=py310h936d840_0
+  - pthread-stubs=0.4=hc929b4f_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.3=pyhd8ed1ab_0
+  - pybind11-abi=4=hd8ed1ab_3
+  - pycodestyle=2.12.1=pyhd8ed1ab_0
+  - pycosat=0.6.6=py310h6729b98_0
+  - pycparser=2.22=pyhd8ed1ab_0
+  - pydot=3.0.1=py310h2ec42d9_0
+  - pyflakes=3.2.0=pyhd8ed1ab_0
+  - pygit2=1.15.1=py310h936d840_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - pygtrie=2.5.0=pyhd8ed1ab_0
+  - pyobjc-core=10.3.1=py310h445dc1f_0
+  - pyobjc-framework-cocoa=10.3.1=py310h445dc1f_0
+  - pyopenssl=24.2.1=pyhd8ed1ab_2
+  - pyparsing=3.1.2=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.10.14=h00d2728_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
+  - python-gssapi=1.8.3=py310h2bf1a73_0
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
+  - python-tzdata=2024.1=pyhd8ed1ab_0
+  - python_abi=3.10=4_cp310
+  - pytz=2024.1=pyhd8ed1ab_0
+  - pywin32-on-windows=0.1.0=pyh1179c8e_3
+  - pyyaml=6.0.2=py310h936d840_0
+  - pyzmq=26.1.0=py310h7539bf4_0
+  - qhull=2020.2=h3c5361c_5
+  - readline=8.2=h9e318b2_1
+  - referencing=0.35.1=pyhd8ed1ab_0
+  - reproc=14.2.4.post0=h10d778d_1
+  - reproc-cpp=14.2.4.post0=h93d8f39_1
+  - requests=2.32.3=pyhd8ed1ab_0
+  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
+  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - rich=13.7.1=pyhd8ed1ab_0
+  - rpds-py=0.20.0=py310h12a1ced_0
+  - ruamel.yaml=0.18.6=py310hb372a2b_0
+  - ruamel.yaml.clib=0.2.8=py310hb372a2b_0
+  - s3fs=2024.6.1=pyhd8ed1ab_0
+  - s3transfer=0.10.2=pyhd8ed1ab_0
+  - scikit-learn=1.5.1=py310h9d65eca_0
+  - scipy=1.14.0=py310h35d8cac_1
+  - send2trash=1.8.3=pyh31c8845_0
+  - setuptools=72.1.0=pyhd8ed1ab_0
+  - shellingham=1.5.4=pyhd8ed1ab_0
+  - shortuuid=1.0.13=pyhd8ed1ab_0
+  - shtab=1.7.1=pyhd8ed1ab_0
+  - six=1.16.0=pyh6c4a22f_0
+  - smmap=5.0.0=pyhd8ed1ab_0
+  - sniffio=1.3.1=pyhd8ed1ab_0
+  - soupsieve=2.5=pyhd8ed1ab_1
+  - sqltrie=0.11.1=pyhd8ed1ab_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tabulate=0.9.0=pyhd8ed1ab_1
+  - terminado=0.18.1=pyh31c8845_0
+  - threadpoolctl=3.5.0=pyhc1e730c_0
+  - tinycss2=1.3.0=pyhd8ed1ab_0
+  - tk=8.6.13=h1abcd95_1
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tomlkit=0.13.2=pyha770c72_0
+  - tornado=6.4.1=py310h936d840_0
+  - tqdm=4.66.5=pyhd8ed1ab_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - truststore=0.8.0=pyhd8ed1ab_0
+  - typer=0.12.3=pyhd8ed1ab_0
+  - typer-slim=0.12.3=pyhd8ed1ab_0
+  - typer-slim-standard=0.12.3=hd8ed1ab_0
+  - types-python-dateutil=2.9.0.20240316=pyhd8ed1ab_0
+  - typing-extensions=4.12.2=hd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - typing_utils=0.1.0=pyhd8ed1ab_0
+  - tzdata=2024a=h0c530f3_0
+  - unicodedata2=15.1.0=py310h6729b98_0
+  - uri-template=1.3.0=pyhd8ed1ab_0
+  - urllib3=2.2.2=pyhd8ed1ab_1
+  - vine=5.1.0=pyhd8ed1ab_0
+  - voluptuous=0.15.2=pyhd8ed1ab_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
+  - webcolors=24.8.0=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_2
+  - websocket-client=1.8.0=pyhd8ed1ab_0
+  - wheel=0.44.0=pyhd8ed1ab_0
+  - wrapt=1.16.0=py310hb372a2b_0
+  - xorg-libxau=1.0.11=h0dc2134_0
+  - xorg-libxdmcp=1.1.3=h35c211d_0
+  - xz=5.2.6=h775f41a_0
+  - yaml=0.2.5=h0d85af4_2
+  - yaml-cpp=0.8.0=he965462_0
+  - yarl=1.9.4=py310hb372a2b_0
+  - zc.lockfile=3.0.post1=pyhd8ed1ab_0
+  - zeromq=4.3.5=hde137ed_4
+  - zipp=3.20.0=pyhd8ed1ab_0
+  - zlib=1.3.1=h87427d6_1
+  - zstandard=0.23.0=py310h0e17136_0
+  - zstd=1.5.6=h915ae27_0
   - pip:
-    - python-dotenv
-    - awscli
-    - mkdocs
-    - -e .
+      - annotated-types==0.7.0
+      - awscli==1.33.43
+      - docutils==0.16
+      - dvc==3.53.2
+      - dvc-data==3.15.2
+      - dvc-objects==5.1.0
+      - engine-health==0.0.1
+      - ghp-import==2.1.0
+      - gto==1.7.1
+      - markdown==3.6
+      - mergedeep==1.3.4
+      - mkdocs==1.6.0
+      - mkdocs-get-deps==0.2.0
+      - platformdirs==3.11.0
+      - pyasn1==0.6.0
+      - pydantic==2.8.2
+      - pydantic-core==2.20.1
+      - python-dotenv==1.0.1
+      - pyyaml-env-tag==0.1
+      - rsa==4.7.2
+      - scmrepo==3.3.7
+      - semver==3.0.2
+      - watchdog==4.0.2
+prefix: /Users/xochitl.cedillo/conda_envs/dsa-engine-health
