--- a/.github/workflows/python-static-checks.yml
+++ b/.github/workflows/python-static-checks.yml
@@ -1,6 +1,6 @@
 name: Python Static Checks
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   static-checks:
@@ -23,4 +23,4 @@ jobs:
 
       - name: Run Static Checks
         run: |
-          make static-checks
+          make lint
