--- a/.github/workflows/python-static-checks.yml
+++ b/.github/workflows/python-static-checks.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           python-version: 3.10 # Match this with your environment.yml
           auto-activate-base: false
+          activate-environment: dsa-engine-health
           environment-file: environment.yml
 
       - name: Install dependencies
