--- a/.github/workflows/python-static-checks.yml
+++ b/.github/workflows/python-static-checks.yml
@@ -11,17 +11,28 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+        uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: 3.10 # Match this with your environment.yml
           auto-activate-base: false
-          activate-environment: dsa-engine-health
-          environment-file: environment.yml
+          miniforge-variant: Mambaforge
+          miniforge-version: latest
+          activate-environment: github-actions
+          environment-file: .github/workflows/envs/github-actions.yml
+          # python-version: 3.10 # Match this with your environment.yml
+          # activate-environment: dsa-engine-health
+          # environment-file: ./environment.yml
 
-      - name: Install dependencies
+      - name: Bash
+        shell: bash -el {0}
         run: |
-          make requirements
+          conda info --envs
+          conda list
+
+      # - name: Install dependencies
+      #   run: |
+      #     make requirements
 
       - name: Run Static Checks
+        shell: bash -el {0}
         run: |
           make lint
