feat add experiments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "5000:5000"
     environment:
       MLFLOW_TRACKING_URI: http://0.0.0.0:5000
+      AWS_PROFILE: ${AWS_PROFILE}
       # AWS_ACCESS_KEY_ID: your_access_key_id
       # AWS_SECRET_ACCESS_KEY: your_secret_access_key
     volumes:
